--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,25 @@
+2017-01-20  Marek Polacek  <polacek@redhat.com>
+
+	PR c/64279
+	* c-c++-common/Wduplicated-branches-1.c: New test.
+	* c-c++-common/Wduplicated-branches-10.c: New test.
+	* c-c++-common/Wduplicated-branches-11.c: New test.
+	* c-c++-common/Wduplicated-branches-12.c: New test.
+	* c-c++-common/Wduplicated-branches-2.c: New test.
+	* c-c++-common/Wduplicated-branches-3.c: New test.
+	* c-c++-common/Wduplicated-branches-4.c: New test.
+	* c-c++-common/Wduplicated-branches-5.c: New test.
+	* c-c++-common/Wduplicated-branches-6.c: New test.
+	* c-c++-common/Wduplicated-branches-7.c: New test.
+	* c-c++-common/Wduplicated-branches-8.c: New test.
+	* c-c++-common/Wduplicated-branches-9.c: New test.
+	* c-c++-common/Wimplicit-fallthrough-7.c: Coalesce dg-warning.
+	* g++.dg/cpp0x/lambda/lambda-switch.C: Move dg-warning.
+	* g++.dg/ext/builtin-object-size3.C: Likewise.
+	* g++.dg/gomp/loop-1.C: Likewise.
+	* g++.dg/warn/Wduplicated-branches1.C: New test.
+	* g++.dg/warn/Wduplicated-branches2.C: New test.
+
 2017-01-20  Martin Liska  <mliska@suse.cz>
 
 	PR lto/69188
