--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-20  Richard Biener  <rguenther@suse.de>
+
+	* BASE-VER: Bump to 7.0.1.
+
 2017-01-20  Alexander Monakov  <amonakov@ispras.ru>
 
 	* omp-low.c (omplow_simd_context): New struct.  Use it...
