Skip optional_mthumb tests if GCC has a default mode
2017-01-20  Thomas Preud'homme  <thomas.preudhomme@arm.com>

    gcc/testsuite/
    * lib/target-supports.exp (check_configured_with): New procedure.
    (check_effective_target_default_mode): new effective target.
    * gcc.target/arm/optional_thumb-1.c: Skip if GCC was configured with a
    default mode.  Fix dg-skip-if target selector syntax.
    * gcc.target/arm/optional_thumb-2.c: Likewise.
    * gcc.target/arm/optional_thumb-3.c: Fix dg-skip-if target selector
    syntax.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244723 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,13 @@
+2017-01-20  Thomas Preud'homme  <thomas.preudhomme@arm.com>
+
+	* lib/target-supports.exp (check_configured_with): New procedure.
+	(check_effective_target_default_mode): new effective target.
+	* gcc.target/arm/optional_thumb-1.c: Skip if GCC was configured with a
+	default mode.  Fix dg-skip-if target selector syntax.
+	* gcc.target/arm/optional_thumb-2.c: Likewise.
+	* gcc.target/arm/optional_thumb-3.c: Fix dg-skip-if target selector
+	syntax.
+
 2017-01-20  David Malcolm  <dmalcolm@redhat.com>
 
 	PR c++/77829
