Support unsigned __int20 in checks for size_t mangling
2017-01-20  Joe Seymour  <joe.s@somniumtech.com>

	* acinclude.m4 (GLIBCXX_CHECK_SIZE_T_MANGLING): Support uint20_t.
	* configure: Regenerate.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244727 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-20  Joe Seymour  <joe.s@somniumtech.com>
+
+	* acinclude.m4 (GLIBCXX_CHECK_SIZE_T_MANGLING): Support uint20_t.
+	* configure: Regenerate.
+
 2017-01-20  Jonathan Wakely  <jwakely@redhat.com>
 
 	PR libstdc++/69240
