PR c++/78495 - wrong code inherited ctor and invisi-ref parm 	* cp-gimplify.c (cp_generize_r): Don't skip thunks.
	PR c++/79495
	* g++.dg/cpp1z/inh-ctor38.C: New.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244728 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-20  Nathan Sidwell  <nathan@acm.org>
+
+	PR c++/78495 - wrong code inherited ctor and invisi-ref parm
+	* cp-gimplify.c (cp_generize_r): Don't skip thunks.
+
 2017-01-20  David Malcolm  <dmalcolm@redhat.com>
 
 	PR c++/77829
