--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-20  Nathan Sidwell  <nathan@acm.org>
+
+	PR c++/79495
+	* g++.dg/cpp1z/inh-ctor38.C: New.
+
 2017-01-20  Marek Polacek  <polacek@redhat.com>
 
 	PR c/79152
